2003-03-03  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed 3154394 -- non-repro nil-dereference in DOM::HTMLFormElementImpl::submit

        * khtml/html/html_formimpl.cpp: (HTMLFormElementImpl::submit):
        Add checks for nil like the other methods in this file have.

        - fixed some types to remove a bit of unnecessary overhead

        * khtml/ecma/kjs_window.h: Change types.
        * khtml/ecma/kjs_window.cpp:
        (Window::installTimeout): Change parameter to UString, not Identifier.
        (WindowFunc::tryCall): Pass the UString, not Identifier.
        (ScheduledAction::ScheduledAction): Change parameter to use const QString & to avoid
        a bit of overhead.
        (WindowQObject::installTimeout): Change parameter to UString, not Identifier.

2003-03-03  David Hyatt  <hyatt@apple.com>

	I messed up when i merged Lars' quirks color patch for CSS with
	my original patch.  I'm now exactly matching Lars' patch, and this
	now fixes bug 3181185.
	
        Reviewed by darin

        * khtml/css/cssparser.cpp:
        (CSSParser::parseColor):

2003-03-03  David Hyatt  <hyatt@apple.com>

	Fix for 3179084.  Fix is to just dump our code so that the new
	addHTMLColor code kicks in.  This code is very close to WinIE
	on more-colortests.html.
	
        Reviewed by darin

        * ChangeLog:
        * kwq/KWQColor.mm:
        (QColor::setNamedColor):

2003-03-03  David Hyatt  <hyatt@apple.com>

	Fix for 3178361, <th> don't draw borders.   Boneheaded mistake
	on my part.  Just forgot to include it along with <td> in the
	CSS hack for sharing cell rules.
	
        Reviewed by rjw

        * khtml/css/cssstyleselector.cpp:

2003-03-03  Richard Williamson   <rjw@apple.com>

        Fix build oops from last checkin to khtml/html/html_formimpl.cpp.
        
        Reviewed by trey

        * khtml/html/html_formimpl.cpp:
        (encodeCString):

2003-03-03  Darin Adler  <darin@apple.com>

        Reviewed by Dave.
