@@ -1,3 +1,13 @@
+2003-03-03  David Hyatt  <hyatt@apple.com>
+
+	Clean up dynamic ID/CLASS setting/removal.  Make ID actually
+	work when set dynamically.  Fixes bug 3173050.
+	
+        Reviewed by john
+
+        * khtml/html/html_elementimpl.cpp:
+        (HTMLElementImpl::parseAttribute):
+
 2003-03-03  Darin Adler  <darin@apple.com>
 
         Reviewed by Dave.
